# fadec

./: encode2.c  instrs.txt  meson.build  meson_options.txt  parseinstrs.py
